// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for <MultipleCustomHooks /> should display properly after loading 1`] = `
<div>
  <h1>
    BreakingBad Quotes
  </h1>
  <hr />
  <blockquote
    className="blockquote text-right"
  >
    <p
      className="mb-0"
    >
       
      This is a test quote.
       
    </p>
    <br />
    <footer
      className="blockquote-footer"
    >
       
      Test Author
       
    </footer>
  </blockquote>
  <button
    className="btn btn-primary"
    onClick={[Function]}
  >
    Next quote
  </button>
</div>
`;

exports[`Tests for <MultipleCustomHooks /> should display properly before loading 1`] = `
<div>
  <h1>
    BreakingBad Quotes
  </h1>
  <hr />
  <div
    className="alert alert-info text-center"
  >
    Loading...
  </div>
  <button
    className="btn btn-primary"
    onClick={[Function]}
  >
    Next quote
  </button>
</div>
`;
